# comment-raffle

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py  models.py
frontend/: app.js  index.html  style.css
